force-app/main/default/objects/Lead__c/fields/Alternalte_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Alternalte_Mobile__c</fullName>
    <label>Alternalte Mobile</label>
    <type>Phone</type>
</CustomField>