force-app/main/default/objects/Lead__c/fields/Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email__c</fullName>
    <label>Alternate Email</label>
    <type>Email</type>
</CustomField>