force-app/main/default/objects/Lead__c/fields/Assigned_SPOC__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_SPOC</relationshipName>
    <type>Lookup</type>
</CustomField>