force-app/main/default/objects/Lead__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <label>Assigned Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test &amp; Measurement</fullName>
            </value>
            <value>
                <fullName>Protection Solution</fullName>
            </value>
            <value>
                <fullName>Substation Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>