force-app/main/default/objects/Lead__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>