force-app/main/default/objects/Lead__c/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Budget Not Available</fullName>
            </value>
            <value>
                <fullName>Requirement Not Clear</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
            <value>
                <fullName>Duplicate Lead</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Details</fullName>
            </value>
            <value>
                <fullName>Competitor Finalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>