force-app/main/default/objects/Lead__c/fields/Extension_Number__c.field-meta.xml
<CustomField>
    <fullName>Extension_Number__c</fullName>
    <label>Extension Number</label>
    <type>Phone</type>
</CustomField>