force-app/main/default/objects/Lead__c/fields/Has_Converted__c.field-meta.xml
<CustomField>
    <fullName>Has_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Converted</label>
    <type>Checkbox</type>
</CustomField>