force-app/main/default/objects/Lead__c/fields/Lead_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Age_Days__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>