force-app/main/default/objects/Lead__c/fields/Lead_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Lead External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>