force-app/main/default/objects/Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Website – Company Website</fullName>
            </value>
            <value>
                <fullName>IndiaMart</fullName>
            </value>
            <value>
                <fullName>Trade India</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>Palladium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>