force-app/main/default/objects/Lead__c/fields/Lead_Title__c.field-meta.xml
<CustomField>
    <fullName>Lead_Title__c</fullName>
    <label>Lead Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>