force-app/main/default/objects/Lead__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>