force-app/main/default/objects/Lead__c/fields/Qualification_Status__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Status__c</fullName>
    <label>Qualification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>