force-app/main/default/objects/Lead__c/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Buy-Leads</fullName>
            </value>
            <value>
                <fullName>PNS Calls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>