force-app/main/default/objects/Lead__c/fields/Receiver_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Mobile__c</fullName>
    <label>Receiver Mobile</label>
    <type>Phone</type>
</CustomField>