force-app/main/default/objects/Lead__c/fields/SE_Remarks_Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>SE_Remarks_Call_Notes__c</fullName>
    <label>SE Remarks / Call Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>