force-app/main/default/objects/Lead__c/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <label>Territory / Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West 1</fullName>
            </value>
            <value>
                <fullName>West 2</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>