force-app/main/default/objects/Lead__c/recordTypes/Test_Measurement.recordType-meta.xml
<RecordType>
    <fullName>Test_Measurement</fullName>
    <active>true</active>
    <label>Test &amp; Measurement</label>
</RecordType>