force-app/main/default/objects/Lead__c/validationRules/Email_Required_at_Lead_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required_at_Lead_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Lead_Status__c, &quot;Converted&quot;),
  ISCHANGED(Lead_Status__c),
  ISBLANK( Email__c )
)</errorConditionFormula>
    <errorMessage>Email is required before converting the Lead. Please enter an email address to proceed.</errorMessage>
</ValidationRule>