force-app/main/default/objects/Lead__c/validationRules/Location_Mandatory_When_Converting_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Mandatory_When_Converting_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Lead_Status__c , &quot;Converted&quot;),
    ISBLANK(Location__c),
    ISCHANGED(Lead_Status__c)
)</errorConditionFormula>
    <errorMessage>Location is mandatory when converting a Lead. Please populate Location before changing status to Converted.</errorMessage>
</ValidationRule>